# PMDebugger

./: README.md  README_performance_reproduce.md  REDM_performance_reproduce.md  build_memcached.sh  build_pmdebugger.sh  build_pmdk.sh  build_redis.sh  redis.conf  redis_brief_run.sh  redis_run.sh
valgrind-pmdebugger/pmdebugger/: Makefile  Makefile.am  Makefile.in  pmc_common.c  pmc_include.h  pmc_main.c  pmc_tx.c  pmdebugger.h
valgrind-pmdebugger/pmdebugger/.deps/: mydetector_amd64_linux-pmc_common.Po  mydetector_amd64_linux-pmc_main.Po  mydetector_amd64_linux-pmc_tx.Po  pmdebugger_amd64_linux-pmc_common.Po  pmdebugger_amd64_linux-pmc_main.Po  pmdebugger_amd64_linux-pmc_tx.Po  pmemcheck_amd64_linux-pmc_common.Po  pmemcheck_amd64_linux-pmc_main.Po  pmemcheck_amd64_linux-pmc_tx.Po
valgrind-pmdebugger/pmdebugger/tests/: Makefile  Makefile.am  Makefile.in  changeToExe.sh  common.h
valgrind-pmdebugger/pmdebugger/tests/address_specific/: Makefile  Makefile.in  flush_align.vgtest  region_coalescing.c  region_coalescing.vgtest  region_manipulation.c  region_manipulation.vgtest  remove_aligned_region.c  remove_aligned_region.vgtest  remove_regions.c  remove_regions.vgtest
valgrind-pmdebugger/pmdebugger/tests/address_specific/.deps/: flush_align.Po  region_coalescing.Po  region_manipulation.Po  remove_aligned_region.Po  remove_regions.Po
valgrind-pmdebugger/pmdebugger/tests/epoch_durability/: Makefile  Makefile.am  Makefile.in  epoch_durability1.c  epoch_durability1.stderr.exp  epoch_durability1.vgtest  epoch_durability2.c  epoch_durability2.stderr.exp  epoch_durability2.vgtest  epoch_durability3.c  epoch_durability3.stderr.exp  epoch_durability3.vgtest  epoch_durability4.c  epoch_durability4.stderr.exp  epoch_durability4.vgtest
valgrind-pmdebugger/pmdebugger/tests/epoch_durability/.deps/: epoch_durability1.Po  epoch_durability2.Po  epoch_durability3.Po  epoch_durability4.Po
valgrind-pmdebugger/pmdebugger/tests/epoch_redundant_fence/: Makefile  Makefile.am  Makefile.in  epoch_redundant_fence1.c  epoch_redundant_fence1.stderr.exp  epoch_redundant_fence1.vgtest  epoch_redundant_fence2.c  epoch_redundant_fence2.stderr.exp  epoch_redundant_fence2.vgtest  epoch_redundant_fence3.c  epoch_redundant_fence3.stderr.exp  epoch_redundant_fence3.vgtest  epoch_redundant_fence4.c  epoch_redundant_fence4.stderr.exp  epoch_redundant_fence4.vgtest
valgrind-pmdebugger/pmdebugger/tests/epoch_redundant_fence/.deps/: epoch_redundant_fence1.Po  epoch_redundant_fence2.Po  epoch_redundant_fence3.Po  epoch_redundant_fence4.Po
valgrind-pmdebugger/pmdebugger/tests/flush_nothing/: Makefile  Makefile.am  Makefile.in  flush_check.vgtest  missed_flush.vgtest
valgrind-pmdebugger/pmdebugger/tests/flush_nothing/.deps/: flush_check.Po  isa_check.Po  missed_flush.Po
valgrind-pmdebugger/pmdebugger/tests/lack_ordering_in_strand/: Makefile  Makefile.am  Makefile.in  lack_ordering_in_strand1.c  lack_ordering_in_strand1.stderr.exp  lack_ordering_in_strand1.vgtest  lack_ordering_in_strand1_config.h  lack_ordering_in_strand2.c  lack_ordering_in_strand2_config.h
valgrind-pmdebugger/pmdebugger/tests/lack_ordering_in_strand/.deps/: lack_ordering_in_strand1.Po  lack_ordering_in_strand2.Po
valgrind-pmdebugger/pmdebugger/tests/logging_related/: Makefile  Makefile.am  Makefile.in  logging.vgtest  register_file.c  register_file.stderr.exp  register_file.vgtest  trans_cache_flush.c  trans_cache_flush.vgtest
valgrind-pmdebugger/pmdebugger/tests/logging_related/.deps/: logging.Po  register_file.Po  trans_cache_flush.Po
valgrind-pmdebugger/pmdebugger/tests/multiple_overwrite/: Makefile  Makefile.am  Makefile.in  filter_stderr  multiple_overwrite1.stderr.exp  multiple_overwrite1.vgtest  multiple_overwrite2.stderr.exp  multiple_overwrite2.vgtest
valgrind-pmdebugger/pmdebugger/tests/multiple_overwrite/.deps/: multiple_overwrite1.Po  multiple_overwrite2.Po
valgrind-pmdebugger/pmdebugger/tests/no_durability_guarantee/: Makefile  Makefile.am  Makefile.in  cas.c  cas.vgtest  const_store.c  const_store.vgtest  floats.vgtest  isa_check.vgtest  multiple_stores.c  multiple_stores.vgtest  nt_stores.vgtest  set_clean.c  set_clean.vgtest  sse_stores.vgtest  state_machine.c  state_machine.vgtest  state_machine2.c  state_machine2.vgtest  state_no_flush_align.c  state_no_flush_align.vgtest  store_merge.c  store_merge.vgtest  store_split.vgtest  tmp_store.c  tmp_store.vgtest  trans_cache_overl.c  trans_cache_overl.vgtest  trans_excl.c  trans_excl.vgtest  trans_expl.c  trans_expl.vgtest  trans_impl.c  trans_impl.vgtest  trans_impl_nest.c  trans_impl_nest.vgtest  trans_nest.c  trans_nest.vgtest  trans_no_pmem.c  trans_no_pmem.vgtest  (+2 more)
valgrind-pmdebugger/pmdebugger/tests/no_durability_guarantee/.deps/: cas.Po  const_store.Po  floats-floats.Po  multiple_stores.Po  nt_stores.Po  set_clean.Po  sse_stores.Po  state_machine.Po  state_machine2.Po  state_no_flush_align.Po  store_merge.Po  store_split.Po  (+9 more)
valgrind-pmdebugger/pmdebugger/tests/order_guarantee/: Makefile  Makefile.am  Makefile.in  order_guarantee1.c  order_guarantee1.stderr.exp  order_guarantee1.vgtest  order_guarantee1_config.h  order_guarantee2.c  order_guarantee2.stderr.exp  order_guarantee2.vgtest  order_guarantee2_config.h  order_guarantee3.c  order_guarantee3.stderr.exp  order_guarantee3.vgtest  order_guarantee3_config.h  order_guarantee4.c  order_guarantee4.vgtest
valgrind-pmdebugger/pmdebugger/tests/redundant_flush/: Makefile  Makefile.am  Makefile.in  redundant_flush1.stderr.exp  redundant_flush1.vgtest  redundant_flush2.stderr.exp  redundant_flush2.vgtest
valgrind-pmdebugger/pmdebugger/tests/redundant_logging/: Makefile  Makefile.am  Makefile.in  filter_stderr  redundant_logging1.c  redundant_logging1.stderr.exp  redundant_logging1.vgtest  redundant_logging2.c  redundant_logging2.stderr.exp  redundant_logging2.vgtest  redundant_logging3.c  redundant_logging3.stderr.exp  redundant_logging3.vgtest  redundant_logging4.c  redundant_logging4.stderr.exp  redundant_logging4.vgtest  redundant_logging5.c  redundant_logging5.stderr.exp  redundant_logging5.vgtest
(+157 files in other folders)
